hamma sahifaga headerlar copy past qilindi

--- a/tenis.html
+++ b/tenis.html
@@ -145,7 +145,7 @@
 									<a class="nav-link" href="#!">АПЛ</a>
 								</li>
 							</ul>
-							<div class="down-box">
+							<div class="down-box down-box-one">
 								<img src="images/icons/arrow-down.svg" alt="arrow-down" />
 							</div>
 						</div>
@@ -162,18 +162,62 @@
 									<a class="nav-link" href="#!">Зенит</a>
 								</li>
 							</ul>
-							<div class="down-box">
+							<div class="down-box down-box-two">
 								<img src=" images/icons/arrow-down.svg" alt="arrow-down" />
 							</div>
 						</div>
 					</div>
-					<div class="header__drop-list">
+					<div class="header__drop-list header__drop-list-one">
 						<div class="container">
 							<ul class="drop-list-nav__column">
 								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Лига чемпионов</a></li>
 								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Лига Европы</a></li>
 								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Лига конференций</a></li>
 								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Лига Наций</a></li>
+							</ul>
+							<ul class="drop-list-nav__column">
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Россия. РПЛ</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Россия. ФНЛ</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Кубок России</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Китай. Суперлига</a></li>
+							</ul>
+							<ul class="drop-list-nav__column">
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Англия. Премьер-лига</a>
+								</li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Англия. Чемпионшип</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Бельгия. Про-Лига</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Германия. Бундеслига</a>
+								</li>
+							</ul>
+							<ul class="drop-list-nav__column">
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Испания. Примера</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Италия. Серия A</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Франция. Лига 1</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Португалии.
+										Примейра-лига</a></li>
+							</ul>
+							<ul class="drop-list-nav__column">
+								<li class="drop-list-nav__item"><a href="/soccer/league/79" class="drop-list-nav__link">Беларусь.
+										Премьер-лига</a>
+								</li>
+								<li class="drop-list-nav__item"><a href="/soccer/league/905" class="drop-list-nav__link">Казахстан.
+										Премьер-лига</a>
+								</li>
+								<li class="drop-list-nav__item"><a href="/soccer/league/151" class="drop-list-nav__link">Украина.
+										Премьер-лига</a>
+								</li>
+								<li class="drop-list-nav__item"><a href="/soccer/league/215" class="drop-list-nav__link">Турция.
+										Суперлига</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="header__drop-list header__drop-list-two">
+						<div class="container">
+							<ul class="drop-list-nav__column">
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Лига чемпионов 2</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Лига Европы 2</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Лига конференций 2</a></li>
+								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Лига Наций 2</a></li>
 							</ul>
 							<ul class="drop-list-nav__column">
 								<li class="drop-list-nav__item"><a href="#!" class="drop-list-nav__link">Россия. РПЛ</a></li>
